Modified Accordiing to java 17